# Creative-mind-studio

./: .env.example  .gitignore  README.md  validate_env.py
CreativeMind-Studio-Starter/CreativeMind-Studio-Starter/: CONTRIBUTING.md  LICENSE  README.md
CreativeMind-Studio-Starter/CreativeMind-Studio-Starter/docs/: API_CONTRACT.md  PROJECT_PLAN.md  (+1 more)
creative-studio-backend/: .gitignore  Makefile  README.md  alembic.ini  check_tables.py  conftest.py  granite_smoke_test.py  probe_regions.py  pyproject.toml  test_output.txt
creative-studio-backend/alembic/: env.py
creative-studio-backend/alembic/versions/: 0001_initial_schema.py  0002_workflow_fields.py
creative-studio-backend/app/: __init__.py  config.py  main.py
creative-studio-backend/app/agents/: audience_analyst.py  base.py  creative_director.py  ethical_auditor.py  execution_planner.py  marketing_strategist.py  risk_critic.py  synthesis.py  technical_market.py
creative-studio-backend/app/api/: boardroom.py  endpoints_sprint2.py  health.py  projects.py  workflow.py
creative-studio-backend/app/db/: client.py  models.py  repository.py
creative-studio-backend/app/graph/: graph.py  state.py
creative-studio-backend/app/schemas/: agents.py  boardroom.py  granite.py  requests.py  workflow.py
creative-studio-backend/app/services/: granite_client.py  rag.py  trend_radar.py  virality_twin.py  workflow_engine.py
creative-studio-backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_sprint2.py  test_db_repository.py  test_granite_client.py  test_graph.py  test_synthesis.py  test_workflow.py
(+225 files in other folders)
